--- a/eventorganizer.ui/src/app/main-layout/main-layout.component.scss
+++ b/eventorganizer.ui/src/app/main-layout/main-layout.component.scss
@@ -19,3 +19,8 @@ mat-form-field {
     height: 90%;
     margin-top: 1.5%;
 }
+
+.right-nav-container {
+    display: flex;
+    align-items: center;
+}
